# multimedia-playlists

./: CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements.txt
src/playlists/: playlist.py
src/playlists/default_playlist/: playlist.yaml
tests/: __init__.py  test_loader.py
