[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "playlists"
version = "0.2.2"
authors = [
  { name="Stefano Furin", email="furins@gmail.com" },
]
description = "A package to load playlists stored as YAML files"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'PyYAML ~= 6.0',
  'loguru',
 ]

[project.urls]
"Homepage" = "https://github.com/furins/multimedia-playlists"
"Bug Tracker" = "https://github.com/furins/multimedia-playlists/issues"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.2"
tag_format = "$version"
version_files = [
    "pyproject.toml:^version",
    # "cargo.toml:^version",
    # "package.json:\"version\":"
]

[tool.pylint]
max-line-length = 180
max-parents = 10
recursive = true

[tool.autopep8]
max_line_length = 180
in-place = true
recursive = true

[tool.black]
line-length = 180

[tool.flake8]
max-line-length = 180